fix: remove frets gaps on resizing

--- a/virtual-music-kit/style-modules/common/_page-layout.scss
+++ b/virtual-music-kit/style-modules/common/_page-layout.scss
@@ -13,7 +13,6 @@
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
-  align-items: center;
   row-gap: 40px;
 }
 
@@ -28,6 +27,7 @@
   position: relative;
   flex: 1;
   max-width: 150px;
+  min-width: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,7 +48,7 @@
 $key-border: 1px;
 .guitar__key {
   position: relative;
-  width: 120px;
+  width: 100%;
   height: 60px;
   display: flex;
   flex-direction: column;
