--- a/virtual-music-kit/style.css
+++ b/virtual-music-kit/style.css
@@ -191,7 +191,6 @@ summary {
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
-  align-items: center;
   row-gap: 40px;
 }
 
@@ -206,6 +205,7 @@ summary {
   position: relative;
   flex: 1;
   max-width: 150px;
+  min-width: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -223,7 +223,7 @@ summary {
 
 .guitar__key {
   position: relative;
-  width: 120px;
+  width: 100%;
   height: 60px;
   display: flex;
   flex-direction: column;
